testsuite/escript/errors/errors006-for-loop-iterator-same-name-as-function.src
for len := 1 to 5
    print(len);
endfor
